Revert "[theming] Prevent clipping of slider handle edges"
This reverts commit ad3e7d30475c604005bc94d6ade61760bd70ea6c.

This doesn't fix the problem when the window is narrow.

--- a/src/widgets/common/less/jquery.mobile.todons.theme.less
+++ b/src/widgets/common/less/jquery.mobile.todons.theme.less
@@ -1752,5 +1752,5 @@ div.ui-slider-switch div.ui-slider-labelbg-b { width: 60%; height: 100%; right: 
 
 div.ui-slider-switch a.ui-slider-handle { z-index: 20;  width: 101%; height: 32px; margin-top: -18px; margin-left: -101%; }
 span.ui-slider-label { width: 100%; position: absolute;height: 32px;  font-size: 16px; text-align: center; line-height: 2; background: none; border-color: transparent; }
-span.ui-slider-label-a { left: -101%;  margin-right: -1px }
-span.ui-slider-label-b { right: -101%;  margin-left: -1px }
+span.ui-slider-label-a { left: -100%;  margin-right: -1px }
+span.ui-slider-label-b { right: -100%;  margin-left: -1px }
